--- a/.github/stale.yml
+++ b/.github/stale.yml
@@ -6,6 +6,8 @@ daysUntilClose: 7
 exemptLabels:
   - pinned
   - security
+  - notes
+  - research paper
 # Label to use when marking an issue as stale
 staleLabel: wontfix
 # Comment to post when marking an issue as stale. Set to `false` to disable
@@ -14,4 +16,4 @@ markComment: >
   recent activity. It will be closed if no further activity occurs. Thank you
   for your contributions.
 # Comment to post when closing a stale issue. Set to `false` to disable
-closeComment: false
+closeComment: true
